--- a/contact.html
+++ b/contact.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Skontaktuj się z nami.">
+    <meta name="description" content="Skontaktuj się z nami - Szkoła Nauki Jazdy">
     <title>Kontakt - Szkoła Nauki Jazdy</title>
     <link rel="stylesheet" href="mystyle.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <header>
@@ -16,7 +17,7 @@
                     <li><a href="index.html">Strona główna</a></li>
                     <li><a href="about.html">O nas</a></li>
                     <li><a href="courses.html">Kursy</a></li>
-                    <li><a href="contact.html">Kontakt</a></li>
+                    <li><a href="contact.html" class="active">Kontakt</a></li>
                 </ul>
             </nav>
         </div>
@@ -24,13 +25,45 @@
 
     <section id="contact">
         <div class="container">
-            <h2>Kontakt</h2>
-            <p>Skontaktuj się z nami, aby zapisać się na kurs lub dowiedzieć się więcej.</p>
-            <ul class="contact-info">
-                <li><strong>Telefon:</strong> 123-456-789</li>
-                <li><strong>Email:</strong> kontakt@szkola-nauki-jazdy.pl</li>
-                <li><strong>Adres:</strong> Ul. Główna 123, 00-001 Warszawa</li>
-            </ul>
+            <h2>Skontaktuj się z nami</h2>
+            <p>Masz pytania? Chętnie odpowiemy! Wypełnij formularz lub skontaktuj się bezpośrednio z nami.</p>
+            
+            <div class="contact-grid">
+                <div class="contact-form">
+                    <h3>Formularz kontaktowy</h3>
+                    <form action="#" method="post">
+                        <label for="name">Imię i nazwisko</label>
+                        <input type="text" id="name" name="name" required>
+
+                        <label for="email">Adres e-mail</label>
+                        <input type="email" id="email" name="email" required>
+
+                        <label for="message">Wiadomość</label>
+                        <textarea id="message" name="message" rows="5" required></textarea>
+
+                        <button type="submit">Wyślij</button>
+                    </form>
+                </div>
+
+                <!-- Informacje kontaktowe -->
+                <div class="contact-info">
+                    <h3>Dane kontaktowe</h3>
+                    <ul>
+                        <li><i class="fas fa-map-marker-alt"></i> Ul. Szkolna 17, 15-640 Białystok</li>
+                        <li><i class="fas fa-phone-alt"></i> +48 123 456 789</li>
+                        <li><i class="fas fa-envelope"></i> kontakt@szkolanaukzjazdy.pl</li>
+                    </ul>
+                    <h3>Godziny otwarcia</h3>
+                    <ul>
+                        <li><i class="fas fa-clock"></i> Poniedziałek - Piątek: 8:00 - 18:00</li>
+                        <li><i class="fas fa-clock"></i> Sobota: 9:00 - 14:00</li>
+                    </ul>
+                    <!-- Opcjonalnie można dodać mapę Google -->
+                    <div class="map-container">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2394.2644270331252!2d23.083945276498806!3d53.12339867222536!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x471ffb77bfb8d15b%3A0xc43e2f02eebb7ca7!2sSzkolna%2017%2C%2015-640%20Bia%C5%82ystok!5e0!3m2!1spl!2spl!4v1728653199184!5m2!1spl!2spl" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
