--- a/about.html
+++ b/about.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Informacje o naszej szkole nauki jazdy, historia oraz osiągnięcia.">
+    <meta name="description" content="O nas - Szkoła Nauki Jazdy">
     <title>O nas - Szkoła Nauki Jazdy</title>
     <link rel="stylesheet" href="mystyle.css">
-    <link rel="icon" type="images/jpg" href="images/caricon.png">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <header>
@@ -15,7 +15,7 @@
             <nav>
                 <ul>
                     <li><a href="index.html">Strona główna</a></li>
-                    <li><a href="about.html">O nas</a></li>
+                    <li><a href="about.html" class="active">O nas</a></li>
                     <li><a href="courses.html">Kursy</a></li>
                     <li><a href="contact.html">Kontakt</a></li>
                 </ul>
@@ -23,42 +23,33 @@
         </div>
     </header>
 
-    <section id="about">
+    <section id="about" class="page-section">
         <div class="container">
             <h2>O nas</h2>
-            <p>Nasza szkoła oferuje kursy prowadzone przez doświadczonych instruktorów. Zapewniamy naukę w przyjaznej atmosferze, elastyczne terminy zajęć i konkurencyjne ceny. Naszym celem jest, aby każdy z naszych kursantów poczuł się pewnie za kierownicą i zdał egzamin na prawo jazdy za pierwszym razem!</p>
-        </div>
-    </section>
+            <div class="about-content">
+                <div class="about-text">
+                    <h3>Nasza historia</h3>
+                    <p>
+                        Szkoła Nauki Jazdy powstała w 1995 roku z pasji do motoryzacji. Od momentu założenia, nasza misja skupiała się na tym, aby dostarczać kursantom wiedzę, umiejętności oraz pewność siebie za kierownicą. 
+                    </p>
+                    <p>
+                        Jesteśmy jednym z wiodących ośrodków szkolenia kierowców w regionie, z wieloletnim doświadczeniem oraz profesjonalnym podejściem. Zaufały nam tysiące kursantów, a nasza kadra składa się z wykwalifikowanych instruktorów, którzy stawiają na indywidualne podejście.
+                    </p>
+                </div>
+                <div class="about-text">
+                    <h3>Nasza misja</h3>
+                    <p>
+                        Dążymy do tego, aby każdy kursant czuł się pewnie na drodze, rozumiał zasady ruchu drogowego i miał odpowiednie przygotowanie do bezpiecznej jazdy. Oferujemy kursy na prawo jazdy różnych kategorii, z nowoczesnym zapleczem dydaktycznym oraz elastycznymi godzinami zajęć.
+                    </p>
+                </div>
+            </div>
 
-    <!-- Sekcja historii szkoły jazdy -->
-    <section id="history" class="history-section">
-        <div class="container">
-            <h2>Historia Szkoły</h2>
-            <p>Szkoła Nauki Jazdy powstała w 2005 roku z myślą o zapewnieniu najwyższej jakości nauczania przyszłym kierowcom. Od skromnych początków, z jednym instruktorem i małą flotą samochodów, rozwinęliśmy się do jednej z najbardziej renomowanych szkół w regionie.</p>
-            
-            <p>Nasze pierwsze lata działalności to czas intensywnego rozwoju, wprowadzania innowacyjnych metod nauczania oraz współpracy z lokalnymi ośrodkami egzaminacyjnymi. W 2010 roku otworzyliśmy nasze pierwsze dodatkowe oddziały, a liczba naszych kursantów zaczęła rosnąć w imponującym tempie.</p>
-            
-            <p>W ciągu ostatnich 20 lat, wyszkoliliśmy tysiące kierowców, którzy obecnie pewnie poruszają się po drogach. Nasza szkoła zdobyła wiele nagród i certyfikatów jakości, a nasi instruktorzy są stale doszkalani, aby zapewniać kursantom najnowszą wiedzę i umiejętności.</p>
-        </div>
-    </section>
-
-    <!-- Sekcja osiągnięć i wartości -->
-    <section id="achievements" class="achievements-section">
-        <div class="container">
-            <h2>Nasze Osiągnięcia</h2>
-            <ul>
-                <li>20 lat doświadczenia w branży.</li>
-                <li>Ponad 5000 wyszkolonych kierowców.</li>
-                <li>90% naszych kursantów zdaje egzamin za pierwszym razem.</li>
-                <li>Certyfikaty jakości nauczania i nagrody branżowe.</li>
-            </ul>
+            <div class="about-image">
+                <img src="images/school-history.jpg" alt="Zdjęcie szkoły jazdy">
+            </div>
         </div>
     </section>
 
     <footer>
         <div class="container">
-            <p>&copy; 2024 Szkoła Nauki Jazdy. Wszelkie prawa zastrzeżone.</p>
-        </div>
-    </footer>
-</body>
-</html>
+            <p>&copy; 2024 Szkoła Nauki Jazdy. Wszelkie prawa zastrzeżone
