--- a/contact.html
+++ b/contact.html
@@ -33,13 +33,13 @@
                     <h3>Formularz kontaktowy</h3>
                     <form action="#" method="post">
                         <label for="name">Imię i nazwisko</label>
-                        <input type="text" id="name" name="name" required>
+                        <input type="text" id="name" name="name" required placeholder="Janusz Kowalski">
 
                         <label for="email">Adres e-mail</label>
-                        <input type="email" id="email" name="email" required>
+                        <input type="email" id="email" name="email" required placeholder="januszkowalski@gmail.com">
 
                         <label for="message">Wiadomość</label>
-                        <textarea id="message" name="message" rows="5" required></textarea>
+                        <textarea id="message" name="message" rows="5" required ></textarea>
 
                         <button type="submit">Wyślij</button>
                     </form>
@@ -58,7 +58,6 @@
                         <li><i class="fas fa-clock"></i> Poniedziałek - Piątek: 8:00 - 18:00</li>
                         <li><i class="fas fa-clock"></i> Sobota: 9:00 - 14:00</li>
                     </ul>
-                    <!-- Opcjonalnie można dodać mapę Google -->
                     <div class="map-container">
                         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2394.2644270331252!2d23.083945276498806!3d53.12339867222536!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x471ffb77bfb8d15b%3A0xc43e2f02eebb7ca7!2sSzkolna%2017%2C%2015-640%20Bia%C5%82ystok!5e0!3m2!1spl!2spl!4v1728653199184!5m2!1spl!2spl" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
                     </div>
