--- a/about.html
+++ b/about.html
@@ -17,6 +17,7 @@
                     <li><a href="index.html">Strona główna</a></li>
                     <li><a href="about.html" class="active">O nas</a></li>
                     <li><a href="courses.html">Kursy</a></li>
+                    <li><a href="success.html">Sukcesy</a></li>
                     <li><a href="contact.html">Kontakt</a></li>
                 </ul>
             </nav>
