--- a/courses.html
+++ b/courses.html
@@ -16,6 +16,7 @@
                     <li><a href="index.html">Strona główna</a></li>
                     <li><a href="about.html">O nas</a></li>
                     <li><a href="courses.html">Kursy</a></li>
+                    <li><a href="success.html">Sukcesy</a></li>
                     <li><a href="contact.html">Kontakt</a></li>
                 </ul>
             </nav>
