--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
                     <li><a href="index.html">Strona główna</a></li>
                     <li><a href="about.html">O nas</a></li>
                     <li><a href="courses.html">Kursy</a></li>
+                    <li><a href="success.html">Sukcesy</a></li>
                     <li><a href="contact.html">Kontakt</a></li>
+                    
                 </ul>
             </nav>
         </div>
