dodano test do podstrony

--- a/about.html
+++ b/about.html
@@ -31,17 +31,36 @@
                 <div class="about-text">
                     <h3>Nasza historia</h3>
                     <p>
-                        Szkoła Nauki Jazdy powstała w 1995 roku z pasji do motoryzacji. Od momentu założenia, nasza misja skupiała się na tym, aby dostarczać kursantom wiedzę, umiejętności oraz pewność siebie za kierownicą. 
+                        Szkoła Jazdy <i><b>Bezpieczna Droga</b></i> powstała w 2008 roku z pasji do nauczania i miłości do motoryzacji. Od samego początku postawiliśmy na jakość, bezpieczeństwo oraz indywidualne podejście do każdego kursanta. Założyciele naszej szkoły, Anna i Marek Nowak, oboje wieloletni instruktorzy, chcieli stworzyć miejsce, w którym każdy, niezależnie od wieku czy doświadczenia, będzie czuł się pewny i przygotowany do samodzielnej jazdy.
                     </p>
                     <p>
-                        Jesteśmy jednym z wiodących ośrodków szkolenia kierowców w regionie, z wieloletnim doświadczeniem oraz profesjonalnym podejściem. Zaufały nam tysiące kursantów, a nasza kadra składa się z wykwalifikowanych instruktorów, którzy stawiają na indywidualne podejście.
+                        Przez lata działalności zyskaliśmy opinię jednej z najlepszych szkół w regionie, co zawdzięczamy naszemu zaangażowaniu, profesjonalnemu zespołowi i nowoczesnym metodom nauczania.
                     </p>
                 </div>
                 <div class="about-text">
                     <h3>Nasza misja</h3>
                     <p>
-                        Dążymy do tego, aby każdy kursant czuł się pewnie na drodze, rozumiał zasady ruchu drogowego i miał odpowiednie przygotowanie do bezpiecznej jazdy. Oferujemy kursy na prawo jazdy różnych kategorii, z nowoczesnym zapleczem dydaktycznym oraz elastycznymi godzinami zajęć.
+                        W <i><b>Bezpiecznej Drodze</b></i> wierzymy, że każdy zasługuje na solidne przygotowanie do życia za kierownicą. Naszym celem jest nie tylko pomóc kursantom w zdaniu egzaminu, ale przede wszystkim nauczyć ich bezpiecznego i odpowiedzialnego zachowania na drodze. Kładziemy nacisk na praktykę, ucząc reakcji na różne sytuacje drogowe, dzięki czemu nasi absolwenci czują się pewnie nawet w najtrudniejszych warunkach. Nasza misja to wychowanie świadomych kierowców, którzy potrafią myśleć na drodze i przewidywać konsekwencje swoich działań.
                     </p>
+                    <h3>Dlaczego My?</h3>
+                    <p>
+                        Nasza szkoła to nie tylko miejsce nauki – to przede wszystkim zespół ludzi z pasją i wieloletnim doświadczeniem. Wszyscy nasi instruktorzy posiadają niezbędne kwalifikacje, a także regularnie uczestniczą w szkoleniach i kursach doskonalących. Dzięki temu możemy gwarantować, że nasi kursanci uczą się od najlepszych.
+                    </p>
+                    <p>
+                        W naszej flocie posiadamy nowoczesne samochody, dostosowane do potrzeb osób początkujących, a także symulatory jazdy, które pomagają oswoić się z sytuacjami drogowymi jeszcze przed wyjazdem na ulicę.
+                    </p>
+                    <h3>Indywidualne Podejście</h3>
+                    <p>
+                        Każdy kursant ma inne potrzeby i tempo nauki, dlatego też oferujemy elastyczne podejście do każdego uczestnika kursu. Niezależnie od tego, czy jesteś osobą młodą i stawiasz swoje pierwsze kroki za kierownicą, czy wracasz do jazdy po dłuższej przerwie – dopasujemy kurs specjalnie dla Ciebie. 
+                    </p>
+                    <p>
+                        Naszym priorytetem jest Twój komfort i bezpieczeństwo, dlatego też dostosowujemy grafik zajęć do Twoich możliwości oraz oferujemy dodatkowe jazdy, jeśli potrzebujesz więcej czasu na opanowanie niezbędnych umiejętności.
+                    </p>
+                    <h3>Nasze Wartości</h3>
+                    <p>
+                        W Bezpiecznej Drodze kierujemy się wartościami, które są fundamentem naszej działalności. Bezpieczeństwo, odpowiedzialność i profesjonalizm to wartości, które staramy się przekazywać każdemu kursantowi.
+                    </p>
+                    <p> Chcemy, aby nasi absolwenci wyruszali na drogi jako pewni siebie, odpowiedzialni i świadomi kierowcy, którzy respektują innych uczestników ruchu drogowego i potrafią reagować w trudnych sytuacjach.</p>
                 </div>
             </div>
 
