--- a/success.html
+++ b/success.html
@@ -26,7 +26,7 @@
     <!-- Sekcja Galeria -->
     <section id="gallery" class="page-section">
         <div class="container">
-            <h2>Galeria</h2>
+            <h2>Sukcesy</h2>
             <p>Odkryj naszą galerię zdjęć, przedstawiającą nasze pojazdy i infrastrukturę szkoły.</p>
 
             <!-- Slajder zdjęć -->
