--- a/about.html
+++ b/about.html
@@ -65,7 +65,7 @@
             </div>
 
             <div class="about-image">
-                <img src="images/school-history.jpg" alt="Zdjęcie szkoły jazdy">
+                <img src="images/onas.png" alt="Zdjęcie szkoły jazdy">
             </div>
         </div>
     </section>
