--- a/success.html
+++ b/success.html
@@ -34,17 +34,17 @@
         <div class="slider">
         <input type="radio" name="slide" id="slide1" checked>
         <input type="radio" name="slide" id="slide2">
-        <input type="radio" name="slide" id="slide3">
 
     <div class="slides">
         <div class="slide" style="background-image: url('images/successdriving1.png');"></div>
         <div class="slide" style="background-image: url('images/successdriving2.png');"></div>
-        <div class="slide" style="background-image: url('images/image3.jpg');"></div>
+        <div class="slide" style="background-image: url('images/successdriving3.jpg');">
+        </div>
     </div>
 
     <!-- Strzałki nawigacyjne -->
-    <label for="slide1" class="nav-arrow left">&#10094;</label> 
-    <label for="slide2" class="nav-arrow right">&#10095;</label> 
+    <label for="slide1" class="nav-arrow left">&#10094;</label>
+    <label for="slide2" class="nav-arrow right">&#10095;</label>
 
     </div>
 
