--- a/about.html
+++ b/about.html
@@ -71,5 +71,9 @@
     </section>
 
     <footer>
+
         <div class="container">
-            <p>&copy; 2024 Szkoła Nauki Jazdy. Wszelkie prawa zastrzeżone
+            <p>&copy; 2024 Szkoła Nauki Jazdy. Wszelkie prawa zastrzeżone</p>
+            </div>
+    </footer>
+</body>
